audio-tour.css
body {
  background-color: rgba(230, 230, 230, 1);
  font-family: "myriad-pro", sans-serif;
  width: 100%;
  max-width: 30em;
  margin: 0 auto;
}

header {
}
header nav {
  padding: 0.5em;
  background-color: #3b3b3b;
  display: flex;
  justify-content: space-between;
  flex-grow: 1;
}
header a, header img, header span {
  position: relative;
  top: 0;
  width: 1.5rem;
  height: 1.5rem;
  font-size: 1.5em;
  color: #f8f8f8;
}
header a, header span {
  margin-top: -5px;
}
header a#menu {
  text-decoration: none;
}
header img {
  margin: 0 auto;
  border-radius: 1px;
}
header span {
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}
header h1, figcaption h2 {
  text-align: center;
  padding: 0.5em;
  margin: 0;
  color: #ffd028;
  background-color: #252525;
}

section {
  width: 100%;
  background-color: #3b3b3b;
  color: #f4f4f4;
}
section h2 {
  margin: 0;
  padding: 0.5em 1em;
  border: 1px solid rgba(1, 1, 1, 0.4);
  border-width: 1px 0 0px 0;
}
section h2, li strong {
  font-size: 1em;
  font-weight: 300;
}
li strong {
  color: white;
}
section h2 em {
  margin-right: 0.25em;
  font-style: normal;
}
section div {
  display: none;
}
section.active {
  background-color: #e6e6e6;
  color: #232323;
}
section.active h2 {
  border-bottom: none;
  border: none;
}
section.active div {
  display: block;
}

.stop ul {
  clear: both;
  list-style: none;
  padding: 0;
  margin: 0 0 0.5em 0;
}
.stop li {
  background-color: hsla(191.14, 76.09%, 36.08%, 1.00);
  width: 75%;
  margin: 0.25em auto;
  padding: 0.5em;
  border-radius: 3px;
}
.stop li.green {
  background-color: hsla(150.97, 53.14%, 34.31%, 1.00);
}
.stop li.red {
  background-color: hsla(358.88, 78.43%, 40.00%, 1.00);
}
.stop li.yellow {
  background-color: hsla(35.91, 100.00%, 50.20%, 1.00);
}

.stop .icon {
  float: right;
  font-size: 93%;
  border-radius: 2px;
}
.icon.play, .stop > .icon.play {
  width: 0;
  height: 0;
  border-top: 0.55em solid transparent;
  border-bottom: 0.55em solid transparent;
  border-left: 1em solid #eee;
}
.orb .icon.play, li.playing > .icon.play {
  border: none;
  background: #eee;
  width: 1em;
  height: 1em;
}
li .icon.play {
  margin-top: 0.15em;
}
.now-playing .icon {
  display: -webkit-box;
  font-size: 48%;
  margin-right: 0.4em
}
.playing .now-playing .icon.play {
  margin-right: 0.55em;
}

section div > .now-playing {
  margin: 0 auto;
  width: 75%;
}
section div > .now-playing > * {
  float: left;
  margin-right: 1em;
}
section div > .now-playing .timing {
  float: right;
}
section div > .now-playing .co-circle-progress {
  font-size: 3em !important;
}
.stop li .progress {
  display: none;
  float: right;
  margin: -0.4em 1.5em 0 0;
}
.stop li .progress .co-circle-progress {
  font-size: 2em !important;
}

.stop .now-playing {
  display: none;
}
.stop.playing .now-playing {
  display: block;
}

.promo {
  margin: 0 1em;
}

#call-to-action {
  text-align: center;
  font-size: 120%;
}

.restart img {
  width: 28px;
  padding-top: 6px;
}
.jump-back img {
  width: 42px;
}
.orb {
  position: relative;
}
div.co-circle-progress > div.bg {
  background-color: #3b3b3b;
}

aside #restore {
  width: 100%;
  display: block;
  margin: 1em auto;
  text-align: center;
}

/* buttons
 * http://codepen.io/FelipeMarcos/pen/tfhEg
 */
.color .mia-blue {background: #1788a3;} /* possible this not needed */

.btn.mia-blue {
  box-shadow: 0px 4px rgb(24, 136, 163);
  /* box-shadow: none; version 2 */
}
.btn.mia-blue, .btn-two.mia-blue {
  background-color: rgb(80, 155, 173);
  /* background-color: rgb(24, 136, 163); version 2 */
}

.btn, .btn-two {
	margin: 9px;
}
.btn-gradient {
	margin: 5px;
}
a[class*="btn"] {text-decoration: none;}
input[class*="btn"],
button[class*="btn"] {border: 0;}

/* Here you can change the button sizes */
.btn.large,
.btn-two.large,
.btn-effect.large {
  padding: 20px 40px;
  font-size: 22px;
}
.btn.small,
.btn-two.small,
.btn-gradient.small,
.btn-effect.small {
  padding: 8px 18px;
  font-size: 14px;
}
.btn.mini,
.btn-two.mini,
.btn-gradient.mini,
.btn-effect.mini {
  padding: 4px 12px;
  font-size: 12px;
}
.btn.block,
.btn-two.block,
.btn-gradient.block,
.btn-effect.block {
  display: block;
  text-align: center;
}
.btn-gradient.large {
  padding: 15px 45px;
  font-size: 22px;
}
/* Button two - I have no creativity for names */
.rounded {
  border-radius: 10px;
}

/* default button style */
.btn {
	position: relative;
	border: 0;
	padding: 15px 25px;
	display: inline-block;
	text-align: center;
	color: white;
  transition: all 0.08s;
}
.btn:active {
	top: 4px;
}

.btn-two {
	color: white;
	padding: 15px 25px;
	display: inline-block;
	border: 1px solid rgba(0,0,0,0.21);
	border-bottom-color: rgba(0,0,0,0.34);
	text-shadow: 0 1px 0 rgba(0,0,0,0.15);
	box-shadow: 0 1px 0 rgba(255,255,255,0.34) inset,
				0 2px 0 -1px rgba(0,0,0,0.13),
				0 3px 0 -1px rgba(0,0,0,0.08),
				0 3px 13px -1px rgba(0,0,0,0.21);
}
.btn-two:active {
	top: 1px;
	border-color: rgba(0,0,0,0.34) rgba(0,0,0,0.21) rgba(0,0,0,0.21);
	box-shadow: 0 1px 0 rgba(255,255,255,0.89),0 1px rgba(0,0,0,0.05) inset;
	position: relative;
}

figure img {
  max-width: 100%;
}

figcaption h2 {
  margin-top: -3px;
}
#main a {
  text-decoration: none !important;
}

.desktop-only p a:last-child { float: right; margin-right: 0.5em; }

@media only screen and (min-width : 768px) {
  html { background-color: #333; }
  body { min-height: 100vh; }
}

